--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,16 +17,16 @@ main {
 
 .navbar {
     position: fixed;
+    z-index: 1;
     height: 100vh;
     width: 360px;
-    background: white;
-    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 .search {
     margin: 8px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(0,0,0,0.2);
+    background: white;
 }
 
 
