--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -32,13 +32,13 @@ main {
 }
 
 
-#map {
+.map-canvas {
     height: 100%;
     width: 100%;
     background: rgba(0,0,0,0.1);
 }
 
-#search-input {
+.search-input {
     font-size: 15px;
     padding: 14px 10px;
     box-sizing: border-box;
@@ -141,7 +141,7 @@ main {
     opacity: 0.5;
 }
 
-#markerLayer img {
+.markerLayer img {
   animation: bounce .5s infinite alternate;
   -webkit-animation: bounce .5s infinite alternate;
   transform-origin: center;
