add uber attribution in footer

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -108,6 +108,10 @@ main {
     }
 }
 
+.uber-attr {
+    width: 80px;
+}
+
 .iw-title {
     margin: 8px 0;
 }
@@ -164,4 +168,20 @@ main {
         transform: scale(1);
         -webkit-transform: scale(1);
     }
+}
+
+footer {
+    position: fixed;
+    bottom: -5px;
+    left: 80px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+}
+
+.plus {
+    font-size: 20px;
+    font-weight: bold;
+    display: inline;
+    opacity: 0.5;
 }
